# earnbench

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GITHUB_RELEASE_RC1.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  release_checklist.md  release_readiness_report.md
.github/: pull_request_template.md
docs/: README.md  REPRODUCIBILITY.md  blind_injection.md  certified_correct_controls.md  docker_container_cleanup.md  docker_setup.md  external_exploit_validation.md  external_label_agreement.md  external_unearned_anchor.md  maintainer_certified_correctness.md  outcome_classification.md  phase_b.md  phase_c.md  phase_c_prime.md  phase_d_ers.md  policy_earned_credit.md  policy_ef.md  policy_variance.md  publication_readiness_audit.md  registry_geometry.md  registry_structure_validation.md  release_policy.md  validation_ladder.md  zenodo_checklist.md
examples/: README.md  synthetic_visible_test_overfitting.py
scripts/: README.md  implement_registry_and_invariants.py
tests/: test_adapters.py  test_architecture.py  test_audit.py  test_bootstrap_uncertainty.py  test_certified_controls.py  test_certified_controls_github_metadata.py  test_certified_controls_manifest_generation.py  test_cli.py  test_cross_oracle_agreement.py  test_docker_cleanup.py  test_earned_fraction_metric.py  test_examples.py  test_exploit_validator.py  test_exploits.py  test_external_exploit_catalog.py  test_external_label_agreement.py  test_external_unearned.py  test_external_unearned_agreement.py  test_external_unearned_execution.py  test_injection_blind.py  test_injection_error_taxonomy.py  test_injection_validity.py  test_injections.py  (+36 more)
(+258 files in other folders)
