[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earnbench"
version = "0.1.0-rc1"
description = "Executable counterfactual measurement of earned success for SWE agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "César Andrés", email = "cesar.andress@ucjc.edu" }]
keywords = [
  "benchmark",
  "software-engineering",
  "agents",
  "counterfactual",
  "evaluation-integrity",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.scripts]
earnbench = "earnbench.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pyarrow>=15.0", "pyyaml>=6.0"]
swebench = ["pyarrow>=15.0", "swebench>=2.0", "docker>=7.0"]

[project.urls]
Repository = "https://github.com/cesar-andress/earnbench"
Documentation = "https://github.com/cesar-andress/earnbench/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/earnbench"]

[tool.hatch.build.targets.wheel.force-include]
"src/earnbench/registry/manifest.json" = "earnbench/registry/manifest.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
